@@ -1,5 +1,8 @@
 Changes with APR 0.9.7
 
+  *) Fix crash in apr_dir_make_recursive() for relative path
+     when the working directory has been deleted.  [Joe Orton]
+
   *) Win32: fix apr_proc_mutex_trylock() to handle WAIT_TIMEOUT,
      returning APR_EBUSY.  [Ronen Mizrahi <ronen@tversity.com>]
 
